--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
+    <link rel="stylesheet" href="styles.css" />
     <script defer src="script.js"></script>
     <title>Frontend Mentor | Article preview component</title>
 
@@ -26,13 +27,33 @@
     </style>
   </head>
   <body>
-    Shift the overall look and feel by adding these wonderful touches to
-    furniture in your home Ever been in a room and felt like something was
-    missing? Perhaps it felt slightly bare and uninviting. I’ve got some simple
-    tips to help you make any room feel complete. Michelle Appleton 28 Jun 2020
+    <main>
+      <div>
+        <img
+          class="dresser-img"
+          src="images/drawers.jpg"
+          alt="Green dresser with two picture frames and a vase"
+        />
+        <h1>
+          Shift the overall look and feel by adding these wonderful touches to
+          furniture in your home
+        </h1>
+      </div>
 
-    <button id="btn">Share</button>
-
+      <p>
+        Ever been in a room and felt like something was missing? Perhaps it felt
+        slightly bare and uninviting. I’ve got some simple tips to help you make
+        any room feel complete.
+      </p>
+    </main>
+    <footer>
+      <img src="images/avatar-michelle.jpg" alt="Michelle Appleton" />
+      <div class="name-date">
+        <p>Michelle Appleton</p>
+        <p>28 Jun 2020</p>
+      </div>
+      <button id="btn">Share</button>
+    </footer>
     <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
