update html and css

--- a/index.html
+++ b/index.html
@@ -28,31 +28,40 @@
   </head>
   <body>
     <main>
-      <div>
+      <div class="main-container">
         <img
           class="dresser-img"
           src="images/drawers.jpg"
           alt="Green dresser with two picture frames and a vase"
         />
-        <h1>
-          Shift the overall look and feel by adding these wonderful touches to
-          furniture in your home
-        </h1>
-      </div>
+        <div class="description">
+          <h1>
+            Shift the overall look and feel by adding these wonderful touches to
+            furniture in your home
+          </h1>
 
-      <p>
-        Ever been in a room and felt like something was missing? Perhaps it felt
-        slightly bare and uninviting. I’ve got some simple tips to help you make
-        any room feel complete.
-      </p>
+          <p>
+            Ever been in a room and felt like something was missing? Perhaps it
+            felt slightly bare and uninviting. I’ve got some simple tips to help
+            you make any room feel complete.
+          </p>
+        </div>
+      </div>
     </main>
     <footer>
-      <img src="images/avatar-michelle.jpg" alt="Michelle Appleton" />
-      <div class="name-date">
-        <p>Michelle Appleton</p>
-        <p>28 Jun 2020</p>
+      <div class="footer-container">
+        <div class="author-container">
+          <img
+            class="author-img"
+            src="images/avatar-michelle.jpg"
+            alt="Michelle Appleton"
+          />
+          <p>Michelle Appleton</p>
+          <p>28 Jun 2020</p>
+        </div>
+
+        <button id="btn">Share</button>
       </div>
-      <button id="btn">Share</button>
     </footer>
     <div class="attribution">
       Challenge by
