--- a/index.html
+++ b/index.html
@@ -27,13 +27,14 @@
     </style>
   </head>
   <body>
-    <main>
-      <div class="main-container">
-        <img
-          class="dresser-img"
-          src="images/drawers.jpg"
-          alt="Green dresser with two picture frames and a vase"
-        />
+    <main class="main-container">
+      <img
+        class="dresser-img"
+        src="images/drawers.jpg"
+        alt="Green dresser with two picture frames and a vase"
+      />
+
+      <section class="sub-container">
         <div class="description">
           <h1>
             Shift the overall look and feel by adding these wonderful touches to
@@ -46,28 +47,33 @@
             you make any room feel complete.
           </p>
         </div>
-      </div>
-    </main>
-    <footer>
-      <div class="footer-container">
-        <div class="author-container">
-          <img
-            class="author-img"
-            src="images/avatar-michelle.jpg"
-            alt="Michelle Appleton"
-          />
-          <p>Michelle Appleton</p>
-          <p>28 Jun 2020</p>
-        </div>
 
-        <button id="btn">Share</button>
-      </div>
-    </footer>
+        <div class="contact-section">
+          <div class="author-wrapper">
+            <img
+              class="author-img"
+              src="images/avatar-michelle.jpg"
+              alt="Michelle Appleton"
+            />
+            <div class="author-text-wrapper">
+              <p class="author-name">Michelle Appleton</p>
+              <p class="author-date">28 Jun 2020</p>
+            </div>
+          </div>
+          <button id="share-btn" class="btn-share">
+            <img src="images/icon-share.svg" alt="" />
+          </button>
+        </div>
+      </section>
+      <section id="share-overlay">
+        <div class="social-icons"></div>
+      </section>
+    </main>
     <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
+      >. Coded by <a href="#">Christina</a>.
     </div>
   </body>
 </html>
