create social icon overlay

--- a/index.html
+++ b/index.html
@@ -65,15 +65,15 @@
           </button>
         </div>
       </section>
-      <section id="share-overlay">
-        <div class="social-icons"></div>
+      <section id="share-overlay" class="share-overlay">
+        <div class="social-icons">
+          <p class="share-text">Share</p>
+          <img class="icon" src="images/icon-facebook.svg" alt="" />
+          <img class="icon" src="images/icon-twitter.svg" alt="" />
+          <img class="icon" src="images/icon-pinterest.svg" alt="" />
+          <img class="btn-share push" src="images/icon-share.svg" alt="" />
+        </div>
       </section>
     </main>
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Christina</a>.
-    </div>
   </body>
 </html>
